--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.5",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "postcss": "^8.4.14"
   }
 }
